--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,17 @@
         opacity: 1;
         transform: translateY(0);
     }
-}.title-bar {
+}
+.title-bar {
     position: fixed;
     z-index: 2;
     top: 0;
     width: 100%;
     background-image: linear-gradient(to bottom, #000000, transparent);
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    /* flex-wrap: wrap; */
     padding: 10px 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.0);
     gap: 15px;
@@ -24,7 +26,7 @@
 #archive, #music {
     background-color: transparent;
     margin: 0;
-    padding: 12px 20px;
+    padding: 1% 2%;
     border: 2px solid #b38124;
     border-radius: 8px;
     color: #b38124;
@@ -32,6 +34,7 @@
     font-weight: 600;
     cursor: pointer;
     transition: all 0.3s ease;
+    align-items: left;
 }
 #archive:hover,#music:hover {
     opacity: 0.9;
@@ -40,7 +43,7 @@
 }
 #title-svg {
     margin: 0 auto;
-    text-align: center;
+    align-items: center;
 }
 #title-svg:hover{
     opacity: 0.9;
@@ -49,7 +52,7 @@
 }
 .menu-icon {
     margin-right: 3%;
-    text-align: right;
+    text-align: end;
 }
 footer {
     position: fixed;
